[package]
name = "mini-cortex-m4-os"
version = "0.1.0"
authors = ["Acciente717 <221thunder@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"
